--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,12 @@ body{
 	overflow-y: auto;
 	margin: 0px;
 	font-weight: 200;
+	color: #333333;
+}
+
+a{
+	color: #72c3e1;
+	text-decoration: none;
 }
 
 	.moudle{
@@ -37,8 +43,8 @@ body{
 	}
 
 	.side-nav-wrap{
-		position: relative;
 		min-height: 100%;
+		position: relative;
 	}
 
 	#side-nav-logo{
@@ -59,6 +65,7 @@ body{
 
 	nav{
 		margin-top: 20px;
+		padding-bottom: 80px;
 	}
 
 	dt{
@@ -70,12 +77,17 @@ body{
 		background-color: #efefef;
 	}
 
+	.trangle{
+		vertical-align: 2px;
+		visibility: hidden;
+	}
+
 	.side-nav-children{
 		display: none;
 	}
 
 	.nav-item{
-		display: block;
+		display: inline-block;
 		text-decoration: none;
 		color: black;
 		margin-left: -50px;
@@ -93,7 +105,8 @@ body{
 
 	.side-nav-legal{
 		position: relative;
-		bottom: 0px;
+		margin-top: -65px;
+		border-top: 1px solid rgba(50,50,50,0.14);
 		height: 30px;
 		border-top: 1px solid rgba(50,50,50,0.14);
 		padding: 20px 0px 10px 30px;
@@ -153,24 +166,19 @@ body{
 		bottom: 0px;
 		left: 0px;
 		right: 0px;
-		height: 30px;
+		height: 33px;
 		border-top: 1px solid rgba(50,50,50,0.14);
 		padding: 20px 30px 10px 30px;
 		background-color: gray;
+		color: white;
 	}
 
 	.next{
-		color: white;
-		margin-top: -10px;
-		padding-top: 9px;
-		padding-bottom: 9px;
-		display: block;
-		position:absolute;
-		right: 0px;
-		top: 10px;
-		padding-right: 5%;
-		padding-left: 40%;
-		text-decoration: none;
+		position: absolute;
+		margin-top: -20px;
+		width: 50%;
+		height: 100%;
+		left: 50%;
 	}
 
 	.next:hover{
@@ -178,17 +186,12 @@ body{
 	}
 
 	.pre{
-		color: white;
-		margin-top: -10px;
-		padding-top: 9px;
-		padding-bottom: 9px;
-		display: block;
-		position:absolute;
+		position: absolute;
+		margin-top: -20px;
 		left: 0px;
-		top: 10px;
-		padding-right: 40%;
-		padding-left: 5%;
-		text-decoration: none;
+		width: 50%;
+		height: 100%;
+		color: white;
 	}
 
 	.pre:hover{
@@ -196,22 +199,32 @@ body{
 	}
 
 	.arrow-pre{
+		position: absolute;
 		display: inline-block;
-		vertical-align: 50%;
+		top: 20px;
+		left: 30px;
 	}
 
 	.arrow-next{
 		display: inline-block;
-		vertical-align: 50%;
+		position: absolute;
+		top: 20px;
+		right: 30px;
 	}
 
 	.text-pre{
 		display: inline-block;
+		position: absolute;
+		left: 50px;
+		top: 10px;
 	}
 
 	.text-next{
+		color: white;
 		display: inline-block;
-		margin-left: 20px;
+		position: absolute;
+		right: 50px;
+		top: 10px;
 	}
 
 
@@ -219,27 +232,30 @@ body{
 		position: absolute;
 		font-size: 0.9em;
 		top: 20px;
-		right: -90px;
+		right: -95px;
 		width: 84px;
 		display: inline-block;
+		z-index: 1000;
 	}
 
 	.theme-item{
 		text-decoration: none;
+		margin-top: 5px;
 		color: black;
+		display: block;
 	}
 
 	#vertical_2{
 		position: relative;
 		display: inline-block;
-		height: 2.0em;
+		height: 3em;
 		background-color: #efefef;
 		width: 2px;
 	}
 
 	#vertical_3{
 		display: inline-block;
-		height: 3.0em;
+		height: 5.0em;
 		background-color: #efefef;
 		width: 2px;
 	}
@@ -266,7 +282,8 @@ body{
 	}
 
 	p{
-		font-size: 0.9em;
+		font-size: 1.0em;
+		line-height: 165%;
 	}
 
 	.check-colors{
@@ -312,6 +329,23 @@ body{
 		opacity: .7;
 	}
 
+	.mask{
+		position: absolute;
+		display: none;
+		left: 0px;
+		right: 0px;
+		top: 0px;
+		bottom: 0px;
+		background-color: rgba(50,50,50,0.5);
+	}
+
+	.tips{
+		color: white;
+		position: absolute;
+		top: 40%;
+		left: 35%;
+	}
+
 	.check-colors-item-detail3{text-align: right; position: relative; top:77px;}
 
 	.check-colors-item-detail2{text-align: right; position: relative; top:77px;}
@@ -322,24 +356,28 @@ body{
 	}
 
 	.inline-block-half-left{
-		width:50%; 
 		display:inline-block; 
 		margin-top:20px;
 	}
 
 	.blod{
-		font-weight: bold;
+		color: #333333;
+		font-weight: 600;
 	}
 
 	.self-h2{
-		font-size: 2.0em;
-		font-weight: 1;
+		font-size:24px;
+		font-weight: 100;
 	}
 
 	.to-top-30{
 		margin-top: 30px;
 	}
 
+	.logo-images{
+		margin-top: 30px;
+		max-width: 100%;
+	}
 
 
 
@@ -411,6 +449,11 @@ body{
 	.content{
 		width: 740px;
 	}
+
+	.par3_icons_list{
+		width: 50%;
+	}
+
 }
 
 @media screen and (max-width: 1460px) and (min-width: 1220px){
@@ -437,6 +480,13 @@ body{
 		width: 1160px;
 	}
 
+	.inline-block-half-left{
+		width: 50%;
+	}
+
+	.par3_icons_list{
+		width: 50%;
+	}
 
 }
 
@@ -468,6 +518,14 @@ body{
 		width: 1180px;
 	}
 
+	.inline-block-half-left{
+		width: 50%;
+	}
+
+	.par3_icons_list{
+		width: 50%;
+	}
+
 }
 
 .color-orange{
@@ -497,10 +555,6 @@ body{
 	margin-left: 70px;
 	font-size: 1.0em;
 }
-.theme-style-changed{
-	position: fixed;
-	top: 85px;
-}
 
 .theme-item-checked{
 	border-left: 2px solid #ff5500;
@@ -510,20 +564,23 @@ body{
 .par3_icons_list{
 	position: relative;
 	display: inline-block;
-	width: 50%;
 	vertical-align: top;
 }
 .icons-cownload-cloumns{
 	position: relative;
-	margin-left: 20px;
-	padding: 5px 0px 10px 0px;
+	padding: 5px 0px 10px 10px;
 	display: inline-block;
 }
-.icons-download{
+a.icons-download:link, a.icons-download:visited{
 	text-decoration: none;
 	display: block;
 	color: #72c3e1;
 }
+a.icons-download:hover{
+	text-decoration: underline;
+	color: #48A1C1;
+}
+
 
 .par{
 	margin-top: 70px;
